# ChangeLog for net-misc/dhcpcd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.399 2014/04/20 23:21:06 williamh Exp $

  20 Apr 2014; William Hubbs <williamh@gentoo.org>
  +files/dhcpcd-6.3.2-fix-cc-setting.patch, +files/dhcpcd-6.3.2-fix-host.patch,
  +files/dhcpcd-6.3.2-gettime-dlopen.patch, dhcpcd-6.3.2.ebuild:
  Add a patch to fix handling of the CC variable and a patch to fix handling of
  --host, both for bug#505508. Also add a patch to make configure script test
  for dlopen.

  06 Apr 2014; Mike Frysinger <vapier@gentoo.org> dhcpcd-5.6.4.ebuild,
  dhcpcd-6.2.0-r1.ebuild, dhcpcd-6.3.2.ebuild, dhcpcd-9999.ebuild:
  Mark arm64/s390/sh stable.

  24 Mar 2014; William Hubbs <williamh@gentoo.org> dhcpcd-9999.ebuild:
  I am removing the tc-export call from the live ebuild per policy. The proper
  fix should be upstream instead of us exporting a variable. It is being worked
  now in bug #505508.

  23 Mar 2014; William Hubbs <williamh@gentoo.org> -dhcpcd-6.3.1-r1.ebuild,
  -files/dhcpcd-6.0.5-fix-build-without-ipv6.patch,
  -files/dhcpcd-6.0.5-fix-segfault.patch, -files/dhcpcd-6.3.1-fix-udev.patch:
  remove old unstable versions and patches

*dhcpcd-6.3.2 (23 Mar 2014)

  23 Mar 2014; William Hubbs <williamh@gentoo.org> +dhcpcd-6.3.2.ebuild:
  version bump

  23 Mar 2014; William Hubbs <williamh@gentoo.org> dhcpcd-9999.ebuild:
  convert live ebuild to use fossil for bug #505126, thanks to Mike Gilbert.

  20 Mar 2014; Mike Gilbert <floppym@gentoo.org> dhcpcd-6.3.1-r1.ebuild,
  dhcpcd-9999.ebuild:
  Set CC before calling configure.

  10 Mar 2014; William Hubbs <williamh@gentoo.org> -dhcpcd-6.0.5-r1.ebuild,
  -dhcpcd-6.1.0.ebuild, -dhcpcd-6.2.1.ebuild, -dhcpcd-6.3.0.ebuild,
  -dhcpcd-6.3.1.ebuild:
  remove older unstable versions

*dhcpcd-6.3.1-r1 (09 Mar 2014)

  09 Mar 2014; William Hubbs <williamh@gentoo.org> +dhcpcd-6.3.1-r1.ebuild,
  +files/dhcpcd-6.3.1-fix-udev.patch: