@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst prepare
+DEPEND=udev? ( virtual/udev ) virtual/pkgconfig
+DESCRIPTION=A fully featured, yet light weight RFC2131 compliant DHCP client
+EAPI=5
+HOMEPAGE=http://roy.marples.name/projects/dhcpcd/
+IUSE=elibc_glibc ipv6 kernel_linux +udev
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd ~amd64-linux ~arm-linux ~x86-linux
+LICENSE=BSD-2
+RDEPEND=udev? ( virtual/udev )
+SLOT=0
+SRC_URI=http://roy.marples.name/downloads/dhcpcd/dhcpcd-6.4.0.tar.bz2
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=83c7220803b93fb36f6a14ab0e4a394b
