@@ -11,16 +11,18 @@ AUX dhcpcd.service 183 SHA256 06aaf350b11b1cea6ced9e2b5c69011e1daf6eb0ac9b2a9f2c
 DIST dhcpcd-5.6.4.tar.bz2 85671 SHA256 4072999704585c16ac45458d459eb50186c3de91c3c14c3288896963cc30b594 SHA512 eb3892604b2f889b4f34835f4d8e0bb2d129f7d0d91da39760eeaf3f75883a6db0e1397ac65084a3ddc4a2968a389fc723e9f031a844ef5333451527be8cb7a2 WHIRLPOOL f8fba52a6f6d4e1822175069f6a636e83b09a1532bd258a4ec9b610e9eb196d35f1cfa0e855521f5d37edb840fb2dd4d46bffc8bf86ded0b205367711f4484ff
 DIST dhcpcd-6.2.0.tar.bz2 121614 SHA256 16ef25e8b6b15dcc0e53ff97a131b09828723dffb12a885f0da91b275296b362 SHA512 bf9394aa23c1b2978ac4b3bad1c7774798e99b6d6b147f57b94b5c1fba7edf80ac769cb8cab7f66203ebc0e93f81d7a05a44dc52f08344b68e8141bbbf1c33a9 WHIRLPOOL bff258cd8a0d2eea14bbc8bac792d4ad69e36d72ffced448f6d6081750ec52d99cb3f1f0aaf1bca42135c2969b2c7defaafa7d0ce875b96db9bbf1277f6bd982
 DIST dhcpcd-6.3.2.tar.bz2 136924 SHA256 b69c1ef06a92f327993ee1cc4cfd9145c296aa1ac6070ba2f9ac74931b2f55ec SHA512 fa5d3287e658064df39c426eaa960567d916dd8241be6b69315f5fa39bdf51c97fbd306222b3e062fa83ec54acd63481bac4c3f52a2f2e5e2a077c76e0bb4326 WHIRLPOOL f318061510a527a28ef6793ae262f09c1276ac96c72e4d49d217509b17baf53ffb9a11b8ceeecd7535d0274a87521090e5fd54c176bbf9f2622c1fd6d36436df
+DIST dhcpcd-6.4.0.tar.bz2 147288 SHA256 0413a9c8910cad4df2758402be88a9f1630361e1f5dd09926161461a1ea69013 SHA512 d2a1be0f26e1537756874ba476bfdb55e97e7cad336e13f35bc34bacb4f9be3c5b21b6eb428d5da1fcb2906a69d8e6f40653391186f663d5b4fbff0115dae204 WHIRLPOOL 1f0791cce950e53c177434732bda3a70b6de5fc0fe7f3cd69f865fd8437ec39d9b7c03d755dfacdd571af3516df89bdcec680caa4b1d95a8351dcfc8e095d20e
 EBUILD dhcpcd-5.6.4.ebuild 3431 SHA256 0210e4b9dd27d8334eb4cb5781ba10de8c084aeef740ccddb7d8ff2a228c303d SHA512 a0834bc94a795f059244b59b7f8abbaab73cdb79339a1bf14b9f62a0c5c2efdcbdfae42659810413a1c6ef963d40ef8c9defbf354d53208935dc6e392b79908f WHIRLPOOL b981b64477e43075c004a81471ccea70f1a0faa14a38f8a6cc70829cec15225f35c69f726a8cc635e2fe5c88eaf69b127afe2678ece7f31292cfae47df211036
 EBUILD dhcpcd-6.2.0-r1.ebuild 2964 SHA256 501cf08e4d24325a8f5d74abd5ea78b813c814a746253ebc399fc06e641e3e35 SHA512 cba3db39abcddace5e2a632151ec69455f65bd31402cd9a3baec65f56d3edda809341c54c3e83e49f3ffb0407b9d4742f190d5cadd21e02346e78d945eb05434 WHIRLPOOL a93c38313302f4453681ffa77fe94ec9f346f55b253fb135417681fcaa8909ba5d3a53192d41d562b538718e049184cb88fbd022bd8dd104db4e40f1d13aff20
 EBUILD dhcpcd-6.3.2.ebuild 3471 SHA256 da98850800cf81b86ce482905b9d5aeeeaf2b7929d1e55e833f1a461729c6ad5 SHA512 01a52afedd6a3d31aacc25d5477f17b20342e2147b60454533716c345cda1029e96ce25c27b60d4083afda6630404cf3bef72ebab0fd130e11ff7dc6bff388dc WHIRLPOOL b1ef214731acf4c0c5601ded3c9e8850cd730724e4df74f08d3099895fcad646c1a4637c27ed9258bc61e4ca41119083f0fc84fc45fffabbc9d83016650925b5
+EBUILD dhcpcd-6.4.0.ebuild 3333 SHA256 5a3351d1317510768b0ba0f85c1ffebe47e3c10fcebdf2259f500836ae02bb9c SHA512 8300932a2fd84e29ae6333e0fb7b5a5fee35b8cc16e48c788ebec7300248261f504b48efb4c972b0fb5e02202fb3bf02f5144ae9a9911150ea346f4833ef704e WHIRLPOOL d6c4ca191b5f6dc68348319b84ef62b18fd051403b8134c8083bde3aefbec7f482c2bf1b8ae7b8ce208f08c0653f9226187210164132633ceb30771f7f82989d
 EBUILD dhcpcd-9999.ebuild 3333 SHA256 3995da0eaaaf8fb7c79340a01dbfbf70e8459b2b30ad91856edc08a1d6a5b074 SHA512 4ca3b7aad47225d3a0a4e28baa70b34a5eb413aabcb1b8f510c699fe36d1aa6d621220334ed5190996dd216cd7897ca5e45666f4d583c337fdfdf8dda55a2062 WHIRLPOOL 8d167b02658ab7f2e808ed2778c03de340fb18e0a4130dce1b0200d62974b8f19300b8e8b68e7f9f25fc000525c57a5654ece9123ea82bccc1606fdc85d613d3
-MISC ChangeLog 56285 SHA256 cb2878bb2052de6fa501430bdb309ffe283f183a99aa1d4e40311ab295f35810 SHA512 352d63a10864205bcf54c7f06cd5b7289e65b3cb8636ca173da54dd1e0b81fb70182e0c58858cc8b5fa74c712c8cfa3e8fbf4d802d3f5b32eaa992e84db9b595 WHIRLPOOL e053451bc755c8d113493aa3b54ed19739dd337cbb85e943fa8be6e84b4c08cd59a15e6b579ebe0b84bbc541572502439b34ab0035eb1c7f73b0b98cb65872c9
+MISC ChangeLog 56402 SHA256 51be28b966c874ef2b42e6794def2b0f0c89191d0d02d21512d66d1a156d3c7a SHA512 4f504e2304d61288648938ec86fed47ec3fcf2b2ebfded9161804e20dbfedb1e898f681cc7e7ae4dd25cf319aa9e5fe542e04b14ef02c8d67f6f26384f6f0865 WHIRLPOOL 0647874aa620c473051135242c82ad9d6e1ffad2322ad25eed3f0ceb202328f7434006526cc78f321f366412488078896cd21160f98a9a645d195df7cda3128e
 MISC metadata.xml 358 SHA256 d2755afa7df7488d44b4904fd1922746bd9ecae448fd73496600e03fd0938707 SHA512 a592a6368f8dc90795b2972fff1c79775de8739d214a4c4403f0528aa1caf993f6e10eb374cb1a38accc915b5cd26c7fac723a712c4570f8a71848d3d9854eac WHIRLPOOL 481a14009c01f31e40ee09d81c273adc1da21b45b5976167cbada8a774775679de5b8233d3effc3f043794cc9f78b7a1705eaa59de4829c150ebe786c46097a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNUVmYACgkQblQW9DDEZThDfACeMLDrmuC3vdJj+ntnH3rBC5g9
-WLMAn0BhDpjgQg/u96hRrWxVlx6KPoLS
-=QCqG
+iEYEAREIAAYFAlOkjSsACgkQblQW9DDEZTif2QCfRNy9O4fecidaHyony6RzmxaO
+eBUAn21Sg3qVlWG3QLxti5Sjz9baZE3J
+=oYo6
 -----END PGP SIGNATURE-----
