@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/dhcpcd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.399 2014/04/20 23:21:06 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.400 2014/06/20 19:36:15 williamh Exp $
+
+*dhcpcd-6.4.0 (20 Jun 2014)
+
+  20 Jun 2014; William Hubbs <william@gentoo.org> +dhcpcd-6.4.0.ebuild:
+  version bump
 
   20 Apr 2014; William Hubbs <williamh@gentoo.org>
   +files/dhcpcd-6.3.2-fix-cc-setting.patch, +files/dhcpcd-6.3.2-fix-host.patch,
